src/containers/ColorByMenu/style.css
@import "../../styles/colors.css";

.feature-select-row {
  margin-bottom: 1em;
}

:global(.ant-select.ant-select-enabled) {
  color: #ffffff;
}

:global(.ant-radio-button-wrapper-disabled.ant-radio-button-wrapper-checked){
  background-color: var(--dimgray);
  color: var(--background-dark-gray);
}

.collapse :global(.ant-collapse-content.ant-collapse-content-active) {
  border-top: none;
}

.interactive-legend-container{
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.interactive-legend-header{
  border-bottom: 0.5px solid var(--dimgray);
  display: flex;
  justify-content: space-between;
  margin-bottom: 2px;
  width: 100%;
}

.feature-select-row :global(.ant-select) {
  width: 100%;
}

